Notification setting integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1362,7 +1362,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="payment_details">Payment details</string>
   <string name="social_accounts">Social accounts</string>
   <string name="general">General</string>
-  <string name="notification_settings">Notification settings</string>
+  <string name="notification_settings">Notification Settings</string>
   <string name="topic_of_interest">Topic of interest</string>
   <string name="help">Help</string>
   <string name="report_spams">Report spam</string>
