--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1557,5 +1557,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="comment_placeholder">Type here. Tag your followers and friends on Momspresso by typing @, followed by their name and then select them from the dropdown! eg @ritu</string>
   <string name="all_month">Month</string>
   <string name="all_category">Category</string>
+  <string name="type_to_search">Type to Search</string>
+  <string name="selected_tags">SELECTED TAGS</string>
 </resources>
 
