Firebase Phone login

--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1517,4 +1517,5 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_questions">Questions</string>
   <string name="original_content">Kindly publish only original content at Momspresso. Plagiarised content i.e. content copied even partially from any source, will not be accepted</string>
   <string name="ok_got_it">Ok, got It</string>
+  <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
 </resources>
