--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1408,7 +1408,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="new_mom_popup_msg">Let us know your child\'s birth date and we will show you just what you need to know for that age!</string>
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">Questions</string>
-  <string name="original_content">Kindly publish only original content at Momspresso. Plagiarised content i.e. content copied even partially from any source, will not be accepted</string>
+  <string name="original_content">অনুগ্রহ করে একমাত্র নিজস্ব রচনাশৈলী মমস্প্রেসোর মঞ্চে পাবলিশ করবেন। অন্যের রচনা,যদি তা স্বল্পাংশও কপি করা হয় তাহলেও আমাদের মঞ্চে গ্রাহ্য করা হবেনা।</string>
   <string name="ok_got_it">Ok, got It</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
 </resources>
