--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1515,7 +1515,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="new_mom_popup_msg">Let us know your child\'s birth date and we will show you just what you need to know for that age!</string>
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">Questions</string>
-  <string name="original_content">Kindly publish only original content at Momspresso. Plagiarised content i.e. content copied even partially from any source, will not be accepted</string>
+  <string name="original_content">કૃપા કરી મોમ્સપ્રેસો ના મંચ પર ફક્ત મૌલિક સ્વ રચિત રચનાઓ જ પ્રકાશિત કરશો. કોઈ પણ સ્તોત્ર થી આંશિક રીતે કોપી કરેલ રચના પણ અહીં માન્ય ગણાશે નહીં.</string>
   <string name="ok_got_it">Ok, got It</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
 </resources>
