--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1399,7 +1399,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="new_mom_popup_msg">Let us know your child\'s birth date and we will show you just what you need to know for that age!</string>
   <string name="profile_emailid_optional">Email Id (optional)</string>
   <string name="all_questions">Questions</string>
-  <string name="original_content">Kindly publish only original content at Momspresso. Plagiarised content i.e. content copied even partially from any source, will not be accepted</string>
+  <string name="original_content">உங்களின் சொந்த படைப்புக்களையே மாம்ஸப்ரெஸ்ஸோ தளத்தில் வெளியிட வேண்டும். வேறொருவரின் படைப்பையோ , அல்லது அதில் ஒரு பகுதியையோ நகலெடுத்து மாம்ஸ்ப்ரெஸ்ஸோ , தளத்தில் பதிவிடுவது ஏற்றுக்கொள்ளப் பட மாட்டாது.</string>
   <string name="ok_got_it">Ok, got It</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
 </resources>
