following status in listing, article challenges tagging + momspressotv fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -536,7 +536,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="explore.events.upcoming_lbl">UPCOMING EVENTS</string>
   <string name="all_videos.toolbar.title">VIDEOS</string>
   <string name="all_videos.toolbar.title.homepage">Videos</string>
-  <string name="all_videos.tabbar.momspresso_label">MOMSPRESSO LIVE</string>
+  <string name="all_videos.tabbar.momspresso_label">MOMSPRESSO TV</string>
   <string name="all_videos.tabbar.funny_label">MOM VLOGS</string>
   <string name="all_videos.funny_videos.no_videos">No mom vlogs added.</string>
   <string name="notification.read_all">Read All</string>
