--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1446,11 +1446,23 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="expected_mom_popup_msg">Let us know your expected date of delivery and we will show you just what you need to know!</string>
   <string name="new_mom_popup_msg">Let us know your child\'s birth date and we will show you just what you need to know for that age!</string>
   <string name="profile_emailid_optional">Email Id (optional)</string>
-  <string name="all_questions">Questions</string>
+  <string name="all_questions">ചോദ്യങ്ങൾ </string>
   <string name="original_content">മോംസ്പ്രെസ്സോ സൈറ്റിൽ നിങ്ങളുടെ സ്വന്തം സൃഷ്ടികൾ പ്രസിദ്ധീകരിക്കുക. മറ്റൊരാളുടെ സൃഷ്ടിയോ അതിന്റെ ഭാഗമോ പകർത്തി മോംസ്പ്രെസ്സോയിൽ പോസ്റ്റുചെയ്യുന്നത് സ്വീകാര്യമല്ല.</string>
   <string name="ok_got_it">Ok, got It</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
   <string name="comment">Comment</string>
+  <string name="live_and_upcoming"><![CDATA[ലൈവ് & ഇനി വരുന്ന ലൈവുകൾ]]></string>
+  <string name="all_library">ലൈബ്രറി </string>
+  <string name="no_upcoming_lives">ഇനി ലൈവ് ഇല്ല </string>
+  <string name="all_guests">അതിഥികൾ </string>
+  <string name="all_live">ലൈവ് </string>
+  <string name="live_starts">ലൈവ് തുടങ്ങുന്നു</string>
+  <string name="all_upcoming_live_sessions">ഇനി വരുന്ന ലൈവ് സെഷനുകൾ </string>
+  <string name="all_leave_questions_here">ഇവിടെ ചോദിക്കൂ </string>
+  <string name="no_live_questions">ചോദ്യങ്ങൾ ഒന്നും പോസ്റ്റ് ചെയ്തിട്ടില്ല </string>
+  <string name="live_ended_ago">%1$s മിനിറ്റ് മുൻപ് അവസാനിച്ചു </string>
+  <string name="live_started_ago">%1$s മിനിറ്റ് മുൻപ് തുടങ്ങി </string>
+  <string name="live_watching_count">%1$d പേർ കാണുന്നു </string>
 </resources>
