--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1398,11 +1398,23 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="expected_mom_popup_msg">Let us know your expected date of delivery and we will show you just what you need to know!</string>
   <string name="new_mom_popup_msg">Let us know your child\'s birth date and we will show you just what you need to know for that age!</string>
   <string name="profile_emailid_optional">Email Id (optional)</string>
-  <string name="all_questions">Questions</string>
+  <string name="all_questions">கேள்விகள் </string>
   <string name="original_content">உங்களின் சொந்த படைப்புக்களையே மாம்ஸப்ரெஸ்ஸோ தளத்தில் வெளியிட வேண்டும். வேறொருவரின் படைப்பையோ , அல்லது அதில் ஒரு பகுதியையோ நகலெடுத்து மாம்ஸ்ப்ரெஸ்ஸோ , தளத்தில் பதிவிடுவது ஏற்றுக்கொள்ளப் பட மாட்டாது.</string>
   <string name="ok_got_it">Ok, got It</string>
   <string name="please_enter_a_valid_code">Please enter a valid verification code.</string>
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
   <string name="comment">Comment</string>
+  <string name="live_and_upcoming">நேரலை மற்றும்  அறிவிப்புகள் </string>
+  <string name="all_library">கோப்பு </string>
+  <string name="no_upcoming_lives">எந்த நேரலையும் சமீபத்தில் இல்லை </string>
+  <string name="all_guests">விருந்தினர்கள்</string>
+  <string name="all_live">நேரலை </string>
+  <string name="live_starts">நேரலை தொடங்க உள்ளது </string>
+  <string name="all_upcoming_live_sessions">வரவிருக்கும் நேரலைகள்</string>
+  <string name="all_leave_questions_here">உங்கள் கேள்விகளை இங்கே கேளுங்கள்</string>
+  <string name="no_live_questions">இந்த நேரலைக்கு எந்த கேள்வியும் கேட்கப்படவில்லை </string>
+  <string name="live_ended_ago">%1$s நிமிடத்திற்கு முன்பு முடிந்தது  </string>
+  <string name="live_started_ago">%1$s நிமிடத்திற்கு முன்பு தொடங்கியது</string>
+  <string name="live_watching_count">%1$d பேர் பார்த்துக் கொண்டிருக்கின்றனர்</string>
 </resources>
