--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1570,5 +1570,17 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="all_momspresso_live">MOMSPRESSO LIVE</string>
   <string name="write_a_comment">Write a comment</string>
   <string name="comment">Comments</string>
+  <string name="live_and_upcoming"><![CDATA[Live & Upcoming]]></string>
+  <string name="all_library">Library</string>
+  <string name="no_upcoming_lives">No upcoming lives</string>
+  <string name="all_guests">GUESTS</string>
+  <string name="all_live">LIVE</string>
+  <string name="live_starts">LIVE Starts</string>
+  <string name="all_upcoming_live_sessions">Upcoming Live Sessions</string>
+  <string name="all_leave_questions_here">Leave your questions here</string>
+  <string name="no_live_questions">No questions have been posted for this live session.</string>
+  <string name="live_ended_ago">Live ended %1$s ago</string>
+  <string name="live_started_ago">Started %1$s ago</string>
+  <string name="live_watching_count">%1$d watching</string>
 </resources>
 
